--- a/templates/index.html
+++ b/templates/index.html
@@ -56,7 +56,7 @@
                     {% endif %}
                 </div>
                 <div class="content-likebooks card">
-                    <h3>猜你喜欢</h3>
+                    <h3>猜你喜欢（未完成）</h3>
                     {% if hot_books is not none %}
                         <div class="row">
                             {% for book in hot_books %}
