--- a/templates/detail.html
+++ b/templates/detail.html
@@ -12,20 +12,32 @@
             <div class="detail-heading card">
                 <h2>{{ book.name }}</h2>
                 <hr>
-                <img style="float:left;" width="300" height="300" src="{{ book.image.url }}">
-                <p>售 价：¥{{ book.discount_price }}</p>
-                <p>折 扣：{{ book.discount }}</p>
-                <p>原 价：￥{{ book.original_price }}</p>
+                <img style="float:left;" src="{{ book.image.url }}">
+                <div>
+                    <p>
+                        售 价：<span style="color:red;"><span
+                            style="font-size:1.2em;">￥{{ book.discount_price }}</span>({{ book.discount }}折)</span>
+                    </p>
+                    <p>原 价：￥{{ book.original_price }}</p>
+                </div>
                 <p>作 者：{{ book.author }}</p>
                 {% if book.translator %}
                     <p>译 者：{{ book.translator }}</p>
                 {% endif %}
+                <hr>
                 <p>版 次：{{ book.revision }}</p>
+                <p>页 数：{{ book.page_numbers }}</p>
                 <p>出 版 社：{{ book.press }}</p>
                 <p>出版日期：{{ book.published_date }}</p>
-                <p>页 数：{{ book.page_numbers }}</p>
+                <hr>
                 <p>存 货 量：{{ book.stock }}</p>
                 <p>销 售 量：{{ book.sales }}</p>
+                <p>所属类别：{{ book.category.up.name }}<span class="text-muted"> / </span>
+                    <a href="{{ url('book:category',args=(book.category.id,1,)) }}">{{ book.category.name }}</a>
+                </p>
+                <hr>
+                <button class="btn btn-info"><span class="glyphicon glyphicon-star"></span> 收藏</button>
+                <button class="btn btn-primary"><span class="glyphicon glyphicon-shopping-cart"></span> 加入购物车</button>
             </div>
             <div class="detail-content card">
                 <h3>内容简介</h3>
@@ -79,7 +91,7 @@
                         {{ macros.pagination_widget(pagination,'book:detail',id=book.id,fragment='#comments') }}
                     </nav>
                 {% else %}
-                    <p style="text-align:center;">当前图书没有评论，确认收货之后才能评论：）</p>
+                    <p style="text-align:center;">当前图书没有评论，确认收货之后才能评论 :)</p>
                 {% endif %}
             </div>
         </div>
