添加了购物车app，实现了添加购物车功能

--- a/templates/base.html
+++ b/templates/base.html
@@ -58,7 +58,7 @@
                                             <span class="glyphicon glyphicon-list-alt"></span> 订单</a>
                                     </li>
                                     <li>
-                                        <a href="{{ url('user:shoppingcart') }}">
+                                        <a href="{{ url('cart:detail') }}">
                                             <span class="glyphicon glyphicon-shopping-cart"></span> 购物车
                                             <span class="badge">18</span>
                                         </a>
