能提交订单

--- a/templates/settlement.html
+++ b/templates/settlement.html
@@ -29,7 +29,7 @@
                 <div class="pull-right">
                     <span style="margin-right:20px;font-size:1.2em;">共 <span style="color:red;">4</span> 本图书</span>
                     <span style="margin-right:20px;font-size:1.2em;">应付总额：<span style="color:red;">￥123.34</span></span>
-                    <button class="btn btn-primary">提交订单</button>
+                    <a href="{{ url('user:order-create') }}" class="btn btn-primary">付款</a>
                 </div>
             </div>
         </div>
