--- a/static/css/base.css
+++ b/static/css/base.css
@@ -41,7 +41,7 @@ a {
     box-shadow: 0 1px 3px rgba(0, 0, 0, .1);
     border-radius: 3px;
     background-color: white;
-    padding: 16px 20px;
+    padding: 20px;
     overflow: hidden;
 }
 
