--- a/templates/base.html
+++ b/templates/base.html
@@ -54,7 +54,7 @@
                             <ul class="nav navbar-nav navbar-right">
                                 {% if request.user.is_authenticated %}
                                     <li>
-                                        <a href="">
+                                        <a href="{{ url('user:order') }}">
                                             <span class="glyphicon glyphicon-list-alt"></span> 订单</a>
                                     </li>
                                     <li>
@@ -84,7 +84,7 @@
                                                 </a>
                                             </li>
                                             <li>
-                                                <a href="">
+                                                <a href="{{ url('user:settings-get') }}">
                                                     <span class="glyphicon glyphicon-cog"></span> 设置</a>
                                             </li>
                                             <li role="separator" class="divider"></li>
@@ -122,7 +122,7 @@
                                         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                                             <span aria-hidden="true">&times;</span>
                                         </button>
-                                        {{ message }}
+                                        {{ message | safe }}
                                     </div>
                                 {% endfor %}
                             {% endif %}
@@ -135,7 +135,8 @@
                 </div>
             {% endblock %}
             {% block scripts %}
-                <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
+                <script src="{{ static('js/jquery.js') }}"></script>
+                <script src="{{ static('js/jquery.cookie.js') }}"></script>
                 <script src="{{ static('js/bootstrap.min.js') }}"></script>
                 <script src="{{ static('js/base.js') }}"></script>
             {% endblock %}
